public class Atendimento {
    private Long id;
    private Date data;
    private Date hora;
    private Double hora;
    private String status;
    private String observacao;
}


