public class Convenio {
    private Long id;
    private String nome;
    private String razaoSocial;
    private String cnpj;
    private String represetante;
    private String email;
    private String telefone;
    private Boolean ativo;
}