public class Especialidade {
    
}
