public class Paciente {
    private Long id;
    private String nome;
    private String email;
    private String telefone;
    private Date dataNascimento;
    private String grupoSanguineo;
    private String sexo;
    private String cep;
    private String endereco;
    private String cidade;
    private String estado;
}
