public class Profissional {
    
}
